src/other/mico-2.3.12/test/idl/error/case18.idl

/*
 * No available value for explicit default case label
 */

union U switch(boolean) {
  case TRUE: long x;
  case FALSE: long y;
  default: long z;
};

